# 101Engine

./: .gitignore  101Engine.sln  101Engine.vcxproj  101Engine.vcxproj.filters  Actor.cpp  Actor.h  App.cpp  App.h  AssimpLoader.cpp  AssimpLoader.h  AssimpNodeTransformAnim.h  Audio.cpp  Audio.h  BehaviorComponent.h  Block.cpp  Block.h  CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Collider.cpp  Collider.h  ColliderSet.cpp  ColliderSet.h  CollisionData.cpp  CollisionData.h  CollisionManager.cpp  CollisionManager.h  Component.cpp  Component.h  ComponentsContainer.h  ConstantBuffer.cpp  ConstantBuffer.h  Context.h  Controller.cpp  Controller.h  Debug.h  EffectBase.cpp  EffectBase.h  (+64 more)
.github/upgrades/: assessment.md  plan.md
Editor/: CMakeLists.txt
Editor/src/: BehaviorTemplateGenerator.cpp  BehaviorTemplateGenerator.h  ClassTemplateGenerator.cpp  ClassTemplateGenerator.h  EditorApp.cpp  EditorApp.h  EditorCamera.cpp  EditorCamera.h  EditorScene.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  MenuBar.cpp  MenuBar.h  ProjectBuilder.cpp  ProjectBuilder.h  SceneViewPanel.cpp  SceneViewPanel.h  ScriptsPanel.cpp  ScriptsPanel.h  main.cpp
Editor/src/Command/: CreateActorCommand.cpp  CreateActorCommand.h  EditorCommandHistory.cpp  EditorCommandHistory.h  IEditorCommand.h
FrameWork/: CMakeLists.txt
FrameWork/src/Engine/: Engine.cpp  EngineComponentRegistration.cpp  EngineComponentrRegistration.h
FrameWork/src/Engine/Actor/: Actor.cpp  Actor.h  ActorFactory.cpp  ActorFactory.h  ActorHandle.h  ActorPool.cpp  ActorPool.h  ActorTag.h  EngineComponentRegistry.h
FrameWork/src/Engine/Audio/: Audio.cpp  Audio.h
FrameWork/src/Engine/Component/: Behavior.cpp  Behavior.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Component.cpp  Component.h  ComponentPolicy.h  MeshRenderer.cpp  MeshRenderer.h  RectTransform.cpp  RectTransform.h  RendererComponent.cpp  RendererComponent.h  SpriteRenderer.cpp  SpriteRenderer.h  Transform.cpp  Transform.h
FrameWork/src/Engine/Core/Context/: Context.h
FrameWork/src/Engine/Core/Debug/: Debug.h
FrameWork/src/Engine/Core/GUID/: Guid.cpp  Guid.h  GuidGenerator.cpp  GuidGenerator.h
FrameWork/src/Engine/Core/Math/: Math.cpp
FrameWork/src/Engine/Core/Path/: PathManager.cpp  PathManager.h
FrameWork/src/Engine/Core/Random/: Random.h
FrameWork/src/Engine/Core/Serialization/: JsonMath.h
FrameWork/src/Engine/Graphics/: CameraSystem.cpp  CameraSystem.h  ConstantBuffer.cpp  ConstantBuffer.h  DescriptorHeap.cpp  DescriptorHeapAllocator.cpp  IndexBuffer.h  LightTypes.h  PipelineState.h  RenderData.cpp  RenderData.h  RenderPipeline.h  RenderSystem.h  RenderTemplateFactory.cpp  RenderTemplateFactory.h  Renderer.cpp  Renderer.h  RootSignature.h  ShaderLibrary.cpp  ShaderLibrary.h  SpriteUtility.h  VertexTypes.cpp  VertexTypes.h
FrameWork/src/Engine/Input/: Controller.cpp  InputManager.cpp  InputManager.h  keyboard.h
FrameWork/src/Engine/Model/: AssimpLoader.h
FrameWork/src/Engine/Physics/: CollisionData.cpp  CollisionData.h  CollisionSystem.cpp
FrameWork/src/Engine/Resource/: AssetManager.cpp  AssetManager.h  MeshGPU.cpp  MeshGPU.h  MeshHandle.h  MeshManager.cpp  MeshManager.h  MetaFIle.cpp  MetaFile.h  TextureManager.cpp  TextureManager.h
FrameWork/src/Engine/Scene/: ComponentRegistry.cpp  ComponentRegistry.h  SceneBase.cpp  SceneBase.h  SceneLoader.cpp  SceneLoader.h  SceneManager.cpp  SceneManager.h  SceneVersion.h  SceneWriter.cpp  SceneWriter.h
FrameWork/src/Engine/UI/: Canvas.cpp  Canvas.h  UIImage.cpp  UIRenderer.cpp  UIRenderer.h  UIimage.h
Game/: CMakeLists.txt
Game/GameCode/: CMakeLists.txt  SampleScene.h  Test.cpp  Test.h  TestBehavior.cpp  TestBehavior.h
Game/src/: main.cpp
Game/src/App/: App.cpp  App.h
Tests/: ActorFactoryTests.cpp  ActorPoolTests.cpp  CMakeLists.txt  ComponentSerializationTests.cpp  CreateActorCommandTests.cpp  EditorCommandHistoryTests.cpp  SceneGuidTests.cpp  SceneLoaderTests.cpp
asset/fbx/Spray/: Spray_01.fbx  Spray_02.fbx  Spray_03.fbx
asset/fbx/fan/: ST_fan.fbx
asset/fbx/hole/: ST_hole.fbx
asset/fbx/screw/: ST_screw.fbx
asset/fbx/sky_box/: sky_box.fbx
asset/fbx/stage/: ST_stage.fbx
asset/fbx/wall_capacitor/: ST_wall_capacitor.fbx
asset/scenes/: _hotreload_temp.scene  output.scene  test.scene
shader/: BasicShader.hlsli  FrameConstants.hlsli  MeshObjectConstants.hlsli  SpriteObjectConstants.hlsli  UIObjectConstants.hlsli
shader/Constants/: LightConstants.hlsli  MeshObjectConstants.hlsli
shader/PixelShader/: MeshPS.hlsl  PixelShader.hlsl  PostEffectPS.hlsl  SpritePS.hlsl  UIPS.hlsl
shader/VertexShader/: MeshVS.hlsl  PostEffectVS.hlsl  ShadowVS.hlsl  SpriteVS.hlsl  UIVS.hlsl  VertexShader.hlsl
shader/compiled/PixelShader/: PostEffectPS.cso  SpritePS.cso
shader/compiled/VertexShader/: MeshVS.cso  PostEffectVS.cso  ShadowVS.cso  SpriteVS.cso  UIVS.cso
src/App/: App.cpp  App.h
src/Engine/: Engine.cpp  Engine.h
src/Engine/Actor/: Actor.cpp  Actor.h  ActorFactory.cpp  ActorFactory.h  ActorTag.h
src/Engine/Audio/: AudioData.h
src/Engine/Component/: AssimpNodeTransformAnim.h  Behavior.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Component.h  MeshRenderer.cpp  MeshRenderer.h  RectTransform.cpp  RectTransform.h  RendererComponent.cpp  RendererComponent.h  SpriteRenderer.cpp  SpriteRenderer.h  Transform.cpp  Transform.h
src/Engine/Core/: Context.h
src/Engine/Graphics/: CameraSystem.cpp  DescriptorHeap.h  DescriptorHeapAllocator.h  FrameRenderData.h  GpuBufferLayouts.h  IndexBuffer.cpp  PipelineState.cpp  PipelineState.h  RenderData.cpp  RenderData.h  RenderSystem.cpp  RenderSystem.h  RenderTemplateFactory.cpp  RenderTemplateFactory.h  Renderer.cpp  Renderer.h  RootSignature.cpp  ShaderLibrary.h  VertexBuffer.cpp  VertexBuffer.h
src/Engine/Input/: Controller.h  InputManager.cpp  InputManager.h
src/Engine/Model/: AssimpLoader.cpp  AssimpLoader.h
src/Engine/Physics/: Collider.cpp  (+9 more)
src/Game/: CameraTest.cpp  CameraTest.h  GameScene.cpp  GameScene.h  Player.cpp  Player.h  TitleScene.cpp  TitleScene.h
src/Main/: main.cpp
(+28 files in other folders)
